Fix mobile prompt box not showing by increasing container height
The prompt input box was not visible on mobile devices because the
container height (31px) was too small to display the input field
(~30px) after accounting for padding (14px vertical). Increased the
height to 44px to provide adequate space (30px) for the input field.

This fix applies to all expando forms (chat, guess, and prompt) on
mobile, ensuring they display correctly when activated.

--- a/client/less/protobowl.less
+++ b/client/less/protobowl.less
@@ -1099,7 +1099,7 @@ body.offline {
 		top: 0;
 		left: 0;
 		right: 0;
-		height: 31px;
+		height: 44px;
 		z-index: 10;
 	}
 	.timer-widget {
